# KnowledgeGraphsAIAgents

./: .gitignore  README.md  conversation_memory.example.json  graph_creator.py  index.html  main.py  pyproject.toml  requirements.txt
Bruno's Brain/: hot.md  index.md
Bruno's Brain/.obsidian/: workspace.json
Bruno's Brain/raw/: AI 2027.md  llm-wiki-idea-file.md
Bruno's Brain/wiki/concepts/: ai-r-and-d-progress-multiplier.md  artificial-general-intelligence.md  intelligence-explosion.md  iterated-distillation-amplification.md  knowledge-graphs.md  knowledge-management.md  memex.md  superhuman-ai-researcher.md
Bruno's Brain/wiki/entities/: ctti.md  obsidian.md  scott-alexander.md  vannevar-bush.md
Bruno's Brain/wiki/sources/: cv-bruno-v3.md  llm-wiki-idea-file.md
Deloitte's Brain/: AGENTS.md  hot.md  log.md
Deloitte's Brain/.obsidian/: app.json
Deloitte's Brain/wiki/entities/: alba-mayol.md  almirall.md  alvaro-ortin.md  bruno-manzano.md  deloitte.md  disease360.md  (+2 more)
backend/: graph_creator.py  main.py  parsers.py  pyproject.toml  requirements.txt  scrapers.py  wiki_agent.py
backend/sessions/: Development Status of NeuroMend.json
brunos-brain-app/: README.md
brunos-brain-app/Deloitte's Brain/: index.md
brunos-brain-app/backend/: gemini_client.py  main.py  requirements.txt  vault.py
brunos-brain-app/docs/: teams-integration-vision.md
brunos-brain-app/frontend/: package.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  app.css
knowledge-vaults/Bruno's Brain/: AGENTS.md  log.md
(+78 files in other folders)
