[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "google-genai>=1.70",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
]
